# signal-tui

./: .gitignore  Cargo.toml  README.md  rustup.nix  shell.nix  update-sqlx.sh
.cargo/: config.toml
.sqlx/: query-50e5f41efac0dfe9633af10d96576e19cbba433dffa60a73361e468f9d2acae3.json
database/: Cargo.toml  test.db
database/src/: content.rs  data.rs  lib.rs
frontend/: Cargo.toml
frontend/src/: ;  database.srust  expirements.rs  logger.rs  main.rs  mysignal.rs  presage_ext.rs  signal.rs  tests.rs  update.rs
frontend/src/model/: multi_line_string.rs
src/: expirements.rs  main.rs  mysignal.rs  presage_ext.rs  signal.rs  update.rs
src/model/: mod.rs  multi_line_string.rs
